--- a/package.json
+++ b/package.json
@@ -32,11 +32,15 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/postcss": "^4.1.18",
+    "archiver": "^7.0.1",
+    "canvas": "^3.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
     "graphql": "^16.8.1",
+    "handlebars": "^4.7.8",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.563.0",
     "next": "15.4.11",
     "payload": "3.73.0",
@@ -44,6 +48,7 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "sharp": "0.34.2",
+    "slugify": "^1.6.6",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "vaul": "^1.1.2"
@@ -51,6 +56,7 @@
   "devDependencies": {
     "@playwright/test": "1.56.1",
     "@testing-library/react": "16.3.0",
+    "@types/archiver": "^7.0.0",
     "@types/node": "^22.5.4",
     "@types/react": "19.2.9",
     "@types/react-dom": "19.2.3",
