--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
+    "@iconify/react": "^6.0.2",
     "@payloadcms/db-postgres": "3.73.0",
     "@payloadcms/next": "3.73.0",
     "@payloadcms/richtext-lexical": "3.73.0",
@@ -43,6 +44,7 @@
     "jszip": "^3.10.1",
     "lucide-react": "^0.563.0",
     "next": "15.4.11",
+    "next-themes": "^0.4.6",
     "payload": "3.73.0",
     "postcss": "^8.5.6",
     "react": "19.2.1",
