--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
@@ -41,6 +42,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "cross-env": "^7.0.3",
+    "date-fns": "^4.1.0",
     "dotenv": "16.4.7",
     "graphql": "^16.8.1",
     "handlebars": "^4.7.8",
@@ -50,17 +52,19 @@
     "next-themes": "^0.4.6",
     "payload": "3.73.0",
     "postcss": "^8.5.6",
-    "react": "19.2.1",
+    "react": "latest",
+    "react-day-picker": "^9.13.0",
     "react-dom": "19.2.1",
+    "recharts": "^3.7.0",
     "sharp": "0.34.2",
     "slugify": "^1.6.6",
-    "tailwind-merge": "^3.4.0",
+    "tailwind-merge": "latest",
     "tailwindcss": "^4.1.18",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@playwright/test": "1.56.1",
-    "@testing-library/react": "16.3.0",
+    "@testing-library/react": "^16.1.0",
     "@types/archiver": "^7.0.0",
     "@types/node": "^22.5.4",
     "@types/react": "19.2.9",
