--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "vaul": "^1.1.2"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.3",
     "@playwright/test": "1.56.1",
     "@testing-library/react": "^16.1.0",
     "@types/archiver": "^7.0.0",
