--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "vitest": "3.2.3"
   },
   "engines": {
-    "node": "^18.20.2 || >=20.9.0",
+    "node": ">=18.20.2 <21 || >=20.9.0 <23",
     "pnpm": "^9 || ^10"
   },
   "pnpm": {
