--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@payloadcms/richtext-lexical": "3.73.0",
     "@payloadcms/ui": "3.73.0",
     "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -36,6 +37,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/postcss": "^4.1.18",
+    "@tanstack/react-table": "^8.21.3",
     "archiver": "^7.0.1",
     "canvas": "^3.2.1",
     "class-variance-authority": "^0.7.1",
@@ -52,9 +54,11 @@
     "next-themes": "^0.4.6",
     "payload": "3.73.0",
     "postcss": "^8.5.6",
+    "radix-ui": "^1.4.3",
     "react": "latest",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.1",
+    "react-icons": "^5.5.0",
     "recharts": "^3.7.0",
     "sharp": "0.34.2",
     "slugify": "^1.6.6",
