--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
+    "@heroui/framer-utils": "^2.1.26",
+    "@heroui/react": "^2.8.8",
+    "@heroui/shared-icons": "^2.1.10",
+    "@heroui/shared-utils": "^2.1.12",
     "@iconify/react": "^6.0.2",
     "@payloadcms/db-postgres": "3.73.0",
     "@payloadcms/next": "3.73.0",
     "@payloadcms/richtext-lexical": "3.73.0",
     "@payloadcms/ui": "3.73.0",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
@@ -30,6 +35,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.8",
@@ -46,9 +52,13 @@
     "cross-env": "^7.0.3",
     "date-fns": "^4.1.0",
     "dotenv": "16.4.7",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.34.0",
     "graphql": "^16.8.1",
     "handlebars": "^4.7.8",
     "jszip": "^3.10.1",
+    "lodash": "^4.17.23",
     "lucide-react": "^0.563.0",
     "next": "15.4.11",
     "next-themes": "^0.4.6",
@@ -64,6 +74,7 @@
     "slugify": "^1.6.6",
     "tailwind-merge": "latest",
     "tailwindcss": "^4.1.18",
+    "usehooks-ts": "^3.1.1",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
@@ -71,6 +82,7 @@
     "@playwright/test": "1.56.1",
     "@testing-library/react": "^16.1.0",
     "@types/archiver": "^7.0.0",
+    "@types/lodash": "^4.17.23",
     "@types/node": "^22.5.4",
     "@types/react": "19.2.9",
     "@types/react-dom": "19.2.3",
