--- a/components.json
+++ b/components.json
@@ -18,13 +18,13 @@
     "lib": "@/lib",
     "hooks": "@/hooks"
   },
- "registries": {
+  "registries": {
     "@shadcnblocks": {
       "url": "https://shadcnblocks.com/r/{name}",
       "headers": {
         "Authorization": "Bearer ${SHADCNBLOCKS_API_KEY}"
       }
-    }
+    },
+    "@diceui": "https://diceui.com/r/{name}.json"
   }
 }
-
