--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@heroui/react": "^2.8.8",
     "@heroui/shared-icons": "^2.1.10",
     "@heroui/shared-utils": "^2.1.12",
+    "@hookform/resolvers": "^5.2.2",
     "@iconify/react": "^6.0.2",
     "@payloadcms/db-postgres": "3.73.0",
     "@payloadcms/next": "3.73.0",
@@ -70,6 +71,7 @@
     "react": "latest",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.1",
+    "react-hook-form": "^7.71.1",
     "react-icons": "^5.5.0",
     "recharts": "^3.7.0",
     "sharp": "0.34.2",
@@ -77,7 +79,8 @@
     "tailwind-merge": "latest",
     "tailwindcss": "^4.1.18",
     "usehooks-ts": "^3.1.1",
-    "vaul": "^1.1.2"
+    "vaul": "^1.1.2",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
