--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react": "latest",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.1",
+    "react-dropzone": "^15.0.0",
     "react-hook-form": "^7.71.1",
     "react-icons": "^5.5.0",
     "recharts": "^3.7.0",
