--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "jszip": "^3.10.1",
     "lodash": "^4.17.23",
     "lucide-react": "^0.563.0",
+    "motion": "^12.34.2",
     "next": "15.4.11",
     "next-themes": "^0.4.6",
     "payload": "3.73.0",
