--- a/package.json
+++ b/package.json
@@ -91,12 +91,14 @@
     "@types/archiver": "^7.0.0",
     "@types/lodash": "^4.17.23",
     "@types/node": "^22.5.4",
+    "@types/pg": "^8.16.0",
     "@types/react": "19.2.9",
     "@types/react-dom": "19.2.3",
     "@vitejs/plugin-react": "4.5.2",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.4.11",
     "jsdom": "26.1.0",
+    "pg": "^8.18.0",
     "playwright": "1.56.1",
     "playwright-core": "1.56.1",
     "prettier": "^3.4.2",
